--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>《网络编辑与制作》练习作业</title>
+</head>
+<body>
+    <ul>《网络编辑与制作》练习作业</ul>
+    <li><a href="01.HTML.html">作业一：HTML元素的运用</a></li>
+    <li><a href="02.css.html">作业二：css基础练习</a></li>
+</body>
+</html>
